--- a/styles/_utilities.less
+++ b/styles/_utilities.less
@@ -17,13 +17,6 @@
   position: relative;
 }
 
-.inline-icon{
-  display: inline-block;
-  vertical-align: middle;
-  webicon{
-    display: block;
-  }
-}
 
 .disable-scrolling{
   overflow-y: hidden;
