--- a/styles/main.less
+++ b/styles/main.less
@@ -48,6 +48,8 @@
   padding: 0 10px;
   cursor: pointer;
   color: #fff;
+  display: inline-block;
+  vertical-align: middle;
   &:hover{
     background: @blue-light;
   }
@@ -226,8 +228,10 @@
 }
 
 .selector__icon{
+  display: inline-block;
   width: 20px;
   height: 2em;
+  vertical-align: middle;
   webicon{
     width: 20px;
     height: 2em;
